FIX bug with student entry pages getting cut off on sidebar side

--- a/sass/stylesheets/main.sass
+++ b/sass/stylesheets/main.sass
@@ -13,6 +13,7 @@ body
 
 #main-wrapper
   height: 100%
+  width: 100%
   overflow-y: auto
   padding: 50px 0 0px 0
 
@@ -20,7 +21,7 @@ body
   position: relative
   height: 100%
   overflow-y: auto
-  padding: 0 0px
+  padding: 0 15px
 
 #sidebar-wrapper
   height: 100%
